--- a/AzureStorage.Demo/appsettings.json
+++ b/AzureStorage.Demo/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AzureStorage": {
     "ConnectionString": "",
-    "TableStorage": "Attendees"
+    "TableStorage": "Attendees",
+    "BlobStorage": ""
   },
   "AllowedHosts": "*"
 }
